--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "medialit",
-  "description": "A digital literacy tool to help you scrutinize and understand media better.",
+  "name": "semantica",
+  "description": "A digital literacy tool to help you scrutinise and understand the media you consume better.",
   "private": true,
   "version": "1.0.0",
   "type": "module",
@@ -18,5 +18,10 @@
     "typescript": "^5.8.3",
     "wxt": "^0.20.6"
   },
-  "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
+  "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977",
+  "dependencies": {
+    "@mozilla/readability": "^0.6.0",
+    "ollama": "^0.5.16",
+    "zod": "^3.25.51"
+  }
 }
