--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977",
   "dependencies": {
     "@mozilla/readability": "^0.6.0",
+    "@webext-core/messaging": "^2.2.0",
     "ollama": "^0.5.16",
     "zod": "^3.25.51"
   }
